--- a/Página Principal/style.css
+++ b/Página Principal/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: aliceblue;
+    background-image: url("https://assets.pokemon.com/static2/_ui/img/chrome/container_bg.png");
     color: white;
     font-family: 'Anton', sans-serif;
     font-weight: bold;
@@ -16,522 +16,179 @@ body {
     top: -12px;
 }
 
-/* Screen Phone */
-@media screen and (width:375px) {
-    #menuPrincipal {
-        width: 100%;
-        height: 60px;
-        border: 0px solid #5AFF2F;
-        border-bottom: 7px solid #5AFF2F;
-        background-color: #000000;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        display: flex;
-        text-align: center;
-    }
-
-    #home {
-        width: 90px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: #5AFF2F;
-        position: relative;
-        top: 0px;
-        left: 0px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
-
-    #home:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
-
-    #imgHome {
-        width: 32px;
-        height: 32px;
-        float: top;
-        position: relative;
-        top: 5px;
-    }
-
-    #pokedex {
-        width: 110px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 0px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
-
-    #pokedex:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
-
-    #imgPokedex {
-        width: 32px;
-        height: 32px;
-        float: top;
-        position: relative;
-        top: 5px;
-    }
-
-    #games {
-        width: 90px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 0px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
-
-    #games:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
-
-    #imgGames {
-        width: 32px;
-        height: 32px;
-        float: top;
-        position: relative;
-        top: 5px;
-    }
-
-    #battle {
-        width: 90px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 0px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
-
-    #battle:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
-
-    #imgBattle {
-        width: 32px;
-        height: 32px;
-        float: top;
-        position: relative;
-        top: 5px;
-    }
-
-    #menuOpcap {
-        width: 58px;
-        height: 60px;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 0px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
-
-    #menuOpcap:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
-
-    #checkbox {
-        width: 0px;
-        height: 0px;
-    }
-
-    #imgMenu {
-        width: 32px;
-        height: 32px;
-        float: right;
-        position: relative;
-        top: 15px;
-        right: 5px;
-    }
-
-    #divText1 {
-        width: 300px;
-        height: auto;
-        background-color: rgba(0, 0, 0, 0.452);
-        border: 2px solid transparent;
-        position: relative;
-        top: 70px;
-        left: 25px;
-        padding: 0px 5px;
-        font-size: 15px;
-    }
-
-    #autores {
-        position: relative;
-        top: 429px;
-        text-align: center;
-    }
+#menuPrincipal {
+    width: 100%;
+    height: 60px;
+    border: 0px solid #5AFF2F;
+    border-bottom: 7px solid #5AFF2F;
+    background-color: #000000;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    text-align: center;
+    z-index: 2;
 }
 
-/* Screen Tablet */
-@media screen and (width:768px) {
-    #menuPrincipal {
-        width: 100%;
-        height: 60px;
-        border: 0px solid #5AFF2F;
-        border-bottom: 7px solid #5AFF2F;
-        background-color: #000000;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        display: flex;
-        text-align: center;
-    }
-
-    .text {
-        position: relative;
-        top: 9px;
-    }
-
-    #home {
-        width: 90px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: #5AFF2F;
-        position: relative;
-        top: 0px;
-        left: 35px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
-
-    #home:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
-
-    #imgHome {
-        width: 32px;
-        height: 32px;
-        float: left;
-        position: relative;
-        top: 15px;
-    }
-
-    #pokedex {
-        width: 110px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 35px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
-
-    #pokedex:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
-
-    #imgPokedex {
-        width: 32px;
-        height: 32px;
-        float: left;
-        position: relative;
-        top: 15px;
-    }
-
-    #games {
-        width: 90px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 35px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
-
-    #games:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
-
-    #imgGames {
-        width: 32px;
-        height: 32px;
-        float: left;
-        position: relative;
-        top: 15px;
-    }
-
-    #battle {
-        width: 90px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 35px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
-
-    #battle:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
-
-    #imgBattle {
-        width: 32px;
-        height: 32px;
-        float: left;
-        position: relative;
-        top: 15px;
-    }
-
-    #menuOpcap {
-        width: 58px;
-        height: 60px;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 275px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
-
-    #menuOpcap:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
-
-    #checkbox {
-        width: 0px;
-        height: 0px;
-    }
-
-    #imgMenu {
-        width: 32px;
-        height: 32px;
-        float: right;
-        position: relative;
-        top: 15px;
-        right: 10px;
-    }
-
-    #divText1 {
-        width: 700px;
-        height: auto;
-        background-color: rgba(0, 0, 0, 0.452);
-        border: 2px solid transparent;
-        position: relative;
-        top: 70px;
-        left: 25px;
-        padding: 0px 5px;
-        font-size: 15px;
-    }
-
-    #autores {
-        position: relative;
-        top: 448px;
-        text-align: center;
-    }
+.text {
+    position: relative;
+    top: 9px;
 }
 
-/* Desktop */
-@media screen and (width:1366px) {
-    #menuPrincipal {
-        width: 100%;
-        height: 60px;
-        border: 0px solid #5AFF2F;
-        border-bottom: 7px solid #5AFF2F;
-        background-color: #000000;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        display: flex;
-        text-align: center;
-        z-index: 2;
-    }
+#home {
+    width: 90px;
+    height: 60px;
+    border-right: 2px solid white;
+    background-color: #5AFF2F;
+    position: relative;
+    top: 0px;
+    left: 35px;
+    padding-left: 3px;
+    padding-right: 3px;
+    transition: all 0.5s;
+}
 
-    .text {
-        position: relative;
-        top: 9px;
-    }
+#home:hover {
+    background-color: #5AFF2F;
+    height: 65px;
+}
 
-    #home {
-        width: 90px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: #5AFF2F;
-        position: relative;
-        top: 0px;
-        left: 35px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
+#imgHome {
+    width: 32px;
+    height: 32px;
+    float: left;
+    position: relative;
+    top: 15px;
+}
 
-    #home:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
+#pokedex {
+    width: 110px;
+    height: 60px;
+    border-right: 2px solid white;
+    background-color: transparent;
+    position: relative;
+    top: 0px;
+    left: 35px;
+    padding-left: 3px;
+    padding-right: 3px;
+    transition: all 0.5s;
+}
 
-    #imgHome {
-        width: 32px;
-        height: 32px;
-        float: left;
-        position: relative;
-        top: 15px;
-    }
+#pokedex:hover {
+    background-color: #5AFF2F;
+    height: 65px;
+}
 
-    #pokedex {
-        width: 110px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 35px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
+#imgPokedex {
+    width: 32px;
+    height: 32px;
+    float: left;
+    position: relative;
+    top: 15px;
+}
 
-    #pokedex:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
+#games {
+    width: 90px;
+    height: 60px;
+    border-right: 2px solid white;
+    background-color: transparent;
+    position: relative;
+    top: 0px;
+    left: 35px;
+    padding-left: 3px;
+    padding-right: 3px;
+    transition: all 0.5s;
+}
 
-    #imgPokedex {
-        width: 32px;
-        height: 32px;
-        float: left;
-        position: relative;
-        top: 15px;
-    }
+#games:hover {
+    background-color: #5AFF2F;
+    height: 65px;
+}
 
-    #games {
-        width: 90px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 35px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
+#imgGames {
+    width: 32px;
+    height: 32px;
+    float: left;
+    position: relative;
+    top: 15px;
+}
 
-    #games:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
+#battle {
+    width: 90px;
+    height: 60px;
+    border-right: 2px solid white;
+    background-color: transparent;
+    position: relative;
+    top: 0px;
+    left: 35px;
+    padding-left: 3px;
+    padding-right: 3px;
+    transition: all 0.5s;
+}
 
-    #imgGames {
-        width: 32px;
-        height: 32px;
-        float: left;
-        position: relative;
-        top: 15px;
-    }
+#battle:hover {
+    background-color: #5AFF2F;
+    height: 65px;
+}
 
-    #battle {
-        width: 90px;
-        height: 60px;
-        border-right: 2px solid white;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 35px;
-        padding-left: 3px;
-        padding-right: 3px;
-        transition: all 0.5s;
-    }
+#imgBattle {
+    width: 32px;
+    height: 32px;
+    float: left;
+    position: relative;
+    top: 15px;
+}
 
-    #battle:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
+#menuOpcap {
+    width: 58px;
+    height: 60px;
+    background-color: transparent;
+    position: relative;
+    top: 0px;
+    left: 864px;
+    padding-right: 3px;
+    transition: all 0.5s;
+    z-index: 2;
+}
 
-    #imgBattle {
-        width: 32px;
-        height: 32px;
-        float: left;
-        position: relative;
-        top: 15px;
-    }
+#menuOpcap:hover {
+    background-color: #5AFF2F;
+    height: 65px;
+}
 
-    #menuOpcap {
-        width: 58px;
-        height: 60px;
-        background-color: transparent;
-        position: relative;
-        top: 0px;
-        left: 864px;
-        padding-right: 3px;
-        transition: all 0.5s;
-        z-index: 2;
-    }
+#checkbox {
+    width: 0px;
+    height: 0px;
+}
 
-    #menuOpcap:hover {
-        background-color: #5AFF2F;
-        height: 65px;
-    }
+#imgMenu {
+    width: 32px;
+    height: 32px;
+    float: right;
+    position: relative;
+    top: 15px;
+    right: 10px;
+}
 
-    #checkbox {
-        width: 0px;
-        height: 0px;
-    }
+#divText1 {
+    width: 1290px;
+    height: auto;
+    background-color: rgba(0, 0, 0, 0.452);
+    border: 2px solid transparent;
+    position: relative;
+    top: 170px;
+    left: 25px;
+    padding: 0px 5px;
+    font-size: 15px;
+}
 
-    #imgMenu {
-        width: 32px;
-        height: 32px;
-        float: right;
-        position: relative;
-        top: 15px;
-        right: 10px;
-    }
+#autores {
+    position: relative;
+    top: 550px;
+    text-align: center;
+}
 
-    #divText1 {
-        width: 1290px;
-        height: auto;
-        background-color: rgba(0, 0, 0, 0.452);
-        border: 2px solid transparent;
-        position: relative;
-        top: 170px;
-        left: 25px;
-        padding: 0px 5px;
-        font-size: 15px;
-    }
-
-    #autores {
-        position: relative;
-        top: 550px;
-        text-align: center;
-    }
-
-    /* #menuSecundario {
+/* #menuSecundario {
         width: 1290px;
         height: 60px;
         border: 0px solid #5AFF2F;
@@ -544,7 +201,7 @@ body {
         text-align: center;
     } */
 
-    #objetivo {
+/* #objetivo {
         width: auto;
         height: auto;
         padding: 0px;
@@ -593,5 +250,47 @@ body {
         left: 100px;
         text-align: center;
         transition: all 0.5s;
-    }
+    } */
+
+#divSobrePokemon {
+    width: 800px;
+    height: auto;
+    position: relative;
+    top: 100px;
+    left: 275px;
+    border: 1px none black;
+}
+
+.tituloPokemon {
+    color: black;
+    font-size: 35px;
+    font-weight: bolder;
+    text-align: center;
+}
+
+.subTituloPokemon {
+    color: black;
+    font-size: 25px;
+    font-weight: bolder;
+    text-align: center;
+}
+
+.textoPokemon {
+    color: black;
+    font-size: 20px;
+    font-weight: normal;
+    text-align: justify;
+}
+
+.imgPokemon {
+    width: 800px;
+    height: auto;
+    object-fit: cover;
+    margin: 40px 0px 100px 0px;
+    border-radius: 5px;
+    transition: all 0.3s;
+}
+
+.imgPokemon:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.63);
 }
