--- a/Pokedex/style.css
+++ b/Pokedex/style.css
@@ -19,8 +19,8 @@ body {
 #menuPrincipal {
     width: 100%;
     height: 60px;
-    border: 0px solid #5AFF2F;
-    border-bottom: 7px solid #5AFF2F;
+    border: 0px solid #BC1D1D;
+    border-bottom: 7px solid #BC1D1D;
     background-color: #000000;
     position: fixed;
     top: 0px;
@@ -30,29 +30,11 @@ body {
     z-index: 2;
 }
 
-#home {
-    width: 6%;
-    height: 60px;
-    border-right: 2px solid white;
-    border-left: 2px solid white;
-    background-color: #5AFF2F;
-    position: relative;
-    top: 0px;
-    left: 35px;
-    padding-left: 3px;
-    padding-right: 3px;
-    transition: all 0.5s;
-}
-
-#home:hover {
-    background-color: #5AFF2F;
-}
-
 .opcaoMenu {
     width: 7.5%;
     height: 60px;
     border-right: 2px solid white;
-    background-color: transparent;
+    border-left: 2px solid white;
     position: relative;
     top: 0px;
     left: 35px;
@@ -62,7 +44,21 @@ body {
 }
 
 .opcaoMenu:hover {
-    background-color: #5AFF2F;
+    background-color: #BC1D1D;
+}
+
+.opcaoMarcada {
+    width: 7.5%;
+    height: 60px;
+    border-right: 2px solid white;
+    border-left: 2px solid white;
+    background-color: #BC1D1D;
+    position: relative;
+    top: 0px;
+    left: 35px;
+    padding-left: 3px;
+    padding-right: 3px;
+    transition: all 0.5s;
 }
 
 .imgOpcaoMenu {
@@ -73,6 +69,7 @@ body {
     top: 15px;
 }
 
+/* Menu */
 #menuOpcap {
     width: 58px;
     height: 60px;
@@ -86,7 +83,7 @@ body {
 }
 
 #menuOpcap:hover {
-    background-color: #5AFF2F;
+    background-color: #BC1D1D;
     height: 65px;
 }
 
@@ -97,65 +94,4 @@ body {
     position: relative;
     top: 15px;
     right: 10px;
-}
-
-#divText1 {
-    width: 1290px;
-    height: auto;
-    background-color: rgba(0, 0, 0, 0.452);
-    border: 2px solid transparent;
-    position: relative;
-    top: 170px;
-    left: 25px;
-    padding: 0px 5px;
-    font-size: 15px;
-}
-
-#autores {
-    position: relative;
-    top: 550px;
-    text-align: center;
-}
-
-#divSobrePokemon {
-    width: 800px;
-    height: auto;
-    position: relative;
-    top: 100px;
-    left: 275px;
-    border: 1px none black;
-}
-
-.tituloPokemon {
-    color: black;
-    font-size: 35px;
-    font-weight: bolder;
-    text-align: center;
-}
-
-.subTituloPokemon {
-    color: black;
-    font-size: 25px;
-    font-weight: bolder;
-    text-align: center;
-}
-
-.textoPokemon {
-    color: black;
-    font-size: 20px;
-    font-weight: normal;
-    text-align: justify;
-}
-
-.imgPokemon {
-    width: 800px;
-    height: auto;
-    object-fit: cover;
-    margin: 40px 0px 100px 0px;
-    border-radius: 5px;
-    transition: all 0.3s;
-}
-
-.imgPokemon:hover {
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.63);
 }
