--- a/Pokedex/style.css
+++ b/Pokedex/style.css
@@ -3,6 +3,7 @@ body {
     color: white;
     font-family: 'Anton', sans-serif;
     font-weight: bold;
+    text-align: center;
 }
 
 .link {
@@ -94,4 +95,85 @@ body {
     position: relative;
     top: 15px;
     right: 10px;
+}
+
+main {
+    display: inline-block;
+    margin-top: 4.3%;
+    padding: 15px;
+    position: relative;
+}
+
+.pokedex {
+    width: 100%;
+    max-width: 425px;
+    height: 570px;
+}
+
+.pokemon__image {
+    position: absolute;
+    bottom: 55%;
+    left: 50%;
+    transform: translate(-63%, 20%);
+    height: 18%;
+}
+
+.pokemon__data {
+    color: #aaa;
+    position: absolute;
+    font-weight: 600;
+    top: 52%;
+    left: 30%;
+    font-size: clamp(8px, 5vw, 20px);
+}
+
+.pokemon__name {
+    color: #3a444d;
+    text-transform: capitalize;
+}
+
+.form {
+    position: absolute;
+    width: 65%;
+    top: 65%;
+    left: 13.5%;
+}
+
+.input__search {
+    width: 100%;
+    padding: 4%;
+    outline: none;
+    border: 2px solid #333;
+    border-radius: 5px;
+    font-weight: 600;
+    color: #3a444d;
+    font-size: clamp(8px, 5vw, 1rem);
+    box-shadow: -3px 4px 0 #888, -5px 7px 0 #333;
+}
+
+.buttons {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    width: 65%;
+    transform: translate(-57%, 0);
+    display: flex;
+    gap: 20px;
+}
+
+.button {
+    width: 50%;
+    padding: 4%;
+    border: 2px solid #000000;
+    border-radius: 5px;
+    box-shadow: -2px 3px 0 #222, -4px 6px 0 #000000;
+    font-weight: 600;
+    color: white;
+    background-color: #444;
+    font-size: clamp(8px, 5vw, 1rem);
+}
+
+.button:active {
+    box-shadow: inset -4px 4px 0 #222;
+    font-size: 0.9rem;
 }
