--- a/Pokedex/style.css
+++ b/Pokedex/style.css
@@ -26,7 +26,7 @@ body {
 
 #menuPrincipal {
     width: 100%;
-    height: 60px;
+    height: 70px;
     border: 0px solid #BC1D1D;
     border-bottom: 7px solid #BC1D1D;
     background-color: #000000;
@@ -40,12 +40,12 @@ body {
 
 .opcaoMenu {
     width: 8.5%;
-    height: 60px;
+    height: 100%;
     border-right: 2px solid white;
     border-left: 2px solid white;
     position: relative;
     top: 0px;
-    left: 2.6%;
+    left: 16.6%;
     padding-left: 0.2%;
     padding-right: 0.1%;
     transition: all 0.5s;
@@ -57,13 +57,13 @@ body {
 
 .opcaoMarcada {
     width: 7.5%;
-    height: 60px;
+    height: 100%;
     border-right: 2px solid white;
     border-left: 2px solid white;
     background-color: #BC1D1D;
     position: relative;
     top: 0px;
-    left: 2.6%;
+    left: 16.6%;
     padding-left: 0.1%;
     padding-right: 0.1%;
 }
@@ -78,12 +78,12 @@ body {
 
 /* Menu */
 #menuOpcap {
-    width: 5%;
-    height: 60px;
+    width: 3.5%;
+    height: 100%;
     background-color: transparent;
     position: absolute;
     top: 0px;
-    left: 90%;
+    left: 83%;
     transition: all 0.5s;
     z-index: 2;
 }
@@ -108,7 +108,7 @@ main {
 }
 
 .pokedex {
-    width: 75%;
+    width: 100%;
     max-width: 425px;
 }
 
@@ -136,9 +136,9 @@ main {
 
 .form {
     position: absolute;
-    width: 45%;
+    width: 55%;
     top: 65%;
-    left: 25.5%;
+    left: 24.5%;
 }
 
 .input__search {
@@ -157,14 +157,14 @@ main {
     position: absolute;
     bottom: 10%;
     left: 50%;
-    width: 45%;
+    width: 60%;
     transform: translate(-57%, 0);
     display: flex;
     gap: 20px;
 }
 
 .button {
-    width: 50%;
+    width: 70%;
     padding: 4%;
     border: 2px solid #000000;
     border-radius: 5px;
