--- a/Página Principal/style.css
+++ b/Página Principal/style.css
@@ -19,7 +19,7 @@ body {
 
 #menuPrincipal {
     width: 100%;
-    height: 60px;
+    height: 70px;
     border: 0px solid #5AFF2F;
     border-bottom: 7px solid #5AFF2F;
     background-color: #000000;
@@ -33,28 +33,30 @@ body {
 
 #home {
     width: 7.5%;
-    height: 60px;
+    height: 100%;
     border-right: 2px solid white;
     border-left: 2px solid white;
     background-color: #5AFF2F;
     position: relative;
     top: 0px;
-    left: 2.6%;
+    left: 15.1%;
     padding-left: 0.1%;
     padding-right: 0.1%;
+    cursor: pointer;
 }
 
 .opcaoMenu {
     width: 8.5%;
-    height: 60px;
+    height: 100%;
     border-right: 2px solid white;
     border-left: 2px solid white;
     background-color: transparent;
     position: relative;
     top: 0px;
-    left: 2.6%;
+    left: 15.1%;
     padding-left: 0.2%;
     padding-right: 0.1%;
+    cursor: pointer;
     transition: all 0.5s;
 }
 
@@ -71,29 +73,50 @@ body {
 }
 
 #menuOpcap {
-    width: 5%;
-    height: 60px;
+    width: 3.5%;
+    height: 100%;
     background-color: transparent;
     position: absolute;
     top: 0px;
-    left: 90%;
+    left: 82%;
     transition: all 0.5s;
     z-index: 2;
+    cursor: pointer;
 }
 
-#menuOpcap:hover {
+/* #menuOpcap:hover {
     background-color: #5AFF2F;
-}
+} */
 
 #imgMenu {
-    width: 60%;
-    height: 60%;
+    width: 65%;
+    height: 65%;
     position: relative;
     top: 25%;
 }
 
+.lateralEsquerdaPreta {
+    position: fixed;
+    left: 0px;;
+    z-index: 1;
+    background-color: #00000015;
+    width: 15%;
+    height: 100%;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.63)
+}
+
+.lateralDireitaPreta {
+    position: fixed;
+    right: 0px;;
+    z-index: 1;
+    background-color: #00000015;
+    width: 15%;
+    height: 100%;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.63)
+}
+
 #divSobrePokemon {
-    width: 70%;
+    width: 68%;
     height: auto;
     position: relative;
     top: 100px;
@@ -133,6 +156,31 @@ body {
 
 .imgPokemon:hover {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.63);
+}
+
+.rodape {
+    width: 100%;
+    height: 250px;
+    position: relative;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
+    margin-top: 100px;;
+    z-index: 0;
+    background-color: #1f1f1f;
+    color: white;
+}
+
+.tituloRodape {
+    text-align: left;
+    position: relative;
+    left: 25%;
+}
+
+.textoRodape {
+    text-align: left;
+    position: relative;
+    left: 0%;
 }
 
 /* Tablet */
