--- a/Pokedex/Telefone/style.css
+++ b/Pokedex/Telefone/style.css
@@ -13,6 +13,7 @@ body {
     z-index: 2;
     top: 0;
     left: 0;
+    background-image: url("https://assets.pokemon.com/static2/_ui/img/chrome/container_bg.png");
     background-color: #000000;
     overflow-x: hidden;
     transition: 0.5s;
@@ -184,4 +185,65 @@ main {
 .button:active {
     box-shadow: inset -4px 4px 0 #222;
     font-size: 0.9rem;
+}
+
+.rodape {
+    width: 100%;
+    height: 250px;
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    margin-top: 20%;
+    z-index: 1;
+    background-color: #1f1f1f;
+    color: white;
+}
+
+.divRodape {
+    position: relative;
+    left: 0%;
+    width: 40%;
+    height: 50%;
+    top: -15px;
+    padding: 0px 10% 0px 0px;
+    border-right: 3px solid #393a39;
+    float: left;
+}
+
+.divRodape2 {
+    position: relative;
+    /*right: 0%;*/
+    left: 10%;
+    width: 40%;
+    height: 50%;
+    top: -15px;
+    padding: 0px;
+    float: left;
+}
+
+.tituloRodape {
+    text-align: center;
+    position: relative;
+}
+
+.textoRodape {
+    position: relative;
+    margin-bottom: 0px;
+    transition: all 0.5s;
+    cursor: pointer;
+}
+
+.textoRodape1 {
+    position: relative;
+    margin-bottom: -15px;
+    transition: all 0.5s;
+    cursor: pointer;
+}
+
+.textoRodape:hover {
+    color: #cac7c7;
+}
+
+.textoRodape1:hover {
+    color: #cac7c7;
 }
